--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 modGroup=com.github.franckyi
-modVersion=0.0.1
+modVersion=1.0.0-alpha1
 modBaseName=IBEEditor-1.11.2
 forgeVersion=1.11.2-13.20.1.2588
 mcpVersion=stable_32
