--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 modGroup=com.github.franckyi
-modVersion=0.0.1
+modVersion=0.0.1-alpha1
 modBaseName=IBEEditor-1.12.2
 forgeVersion=1.12.2-14.23.1.2604
 mcpVersion=snapshot_20180127
