--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 modGroup=com.github.franckyi
-modVersion=1.0.0-alpha5
+modVersion=1.0.0-beta1
 modBaseName=IBEEditor-1.12.2
-forgeVersion=1.12.2-14.23.2.2611
-mcpVersion=snapshot_20180328
+forgeVersion=1.12.2-14.23.3.2655
+mcpVersion=snapshot_20180504
