--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-modGroup=com.github.franckyi
-modVersion=1.0.0-beta1
-modBaseName=IBEEditor-1.12.2
-forgeVersion=1.12.2-14.23.3.2655
-mcpVersion=snapshot_20180504
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
