Alignment rewrite GUI classes reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
-/.idea/
-/.gradle/
-/build/
-/out/
-/run/
-/classes/
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
 *.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
+
+# Files from Forge MDK
+forge*changelog.txt
