--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+// Only edit below this line, the above code adds and enables the necessary things for Forge to be onSetup.
 apply plugin: 'eclipse'
 
 version = '1.0'
@@ -23,7 +23,7 @@ minecraft {
     // snapshot_YYYYMMDD   Snapshot are built nightly.
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
+    // Simply re-run your onSetup task after changing the mappings to update your workspace.
     mappings channel: 'snapshot', version: '20190409-1.13.2'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
