--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,2 @@
-kotlin.code.style=official
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# Check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
-loader_version=0.10.8
-#Fabric api
-fabric_version=0.29.3+1.16
-loom_version=0.5-SNAPSHOT
-# Mod Properties
-mod_version=2.0.0
-maven_group=com.github.franckyi
-archives_base_name=IBEEditor-Fabric-1.16.4
-# Kotlin
-kotlin_version=1.4.21
-fabric_kotlin_version=1.4.21+build.1
+concurrent=true
+gameVersion=1.16.5
