--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,1 @@
-pluginManagement {
-    repositories {
-        jcenter()
-        maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
-        }
-        gradlePluginPortal()
-    }
-
-    plugins {
-        id 'fabric-loom' version loom_version
-        id "org.jetbrains.kotlin.jvm" version kotlin_version
-    }
-
-}
+rootProject.name = 'IBE-Editor'
