--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -2,8 +2,6 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-
-gameVersion=1.16.5
-forgeVersion=36.0.1
-mappingsChannel=snapshot
-mappingsVersion=20201028-1.16.3
+forge_version=1.16.5-36.0.14
+mappings_channel=snapshot
+mappings_version=20201028-1.16.3
