--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -11,9 +11,7 @@ displayName = "IBE Editor"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 credits = "Thanks to Emex for the logo !"
 authors = "Franckyi"
-description = '''
-Simple GUI Mod to edit an item, a block or an entity in your current world
-'''
+description = "Simple GUI Mod to edit an item, a block or an entity in your current world"
 
 [[dependencies.ibeeditor]]
 modId = "forge"
@@ -25,6 +23,6 @@ side = "BOTH"
 [[dependencies.ibeeditor]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.16.5]"
+versionRange = "[1.16,)"
 ordering = "NONE"
 side = "BOTH"
