--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 	compile 'org.apache.logging.log4j:log4j-api:2.8.1'
 	compile 'org.lwjgl:lwjgl-glfw:3.2.2'
+	compile 'com.google.guava:guava:21.0'
 }
 
 test {
