--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.8.1'
     compile 'org.lwjgl:lwjgl-glfw:3.2.2'
     compile 'com.google.guava:guava:21.0'
+    compile 'org.apache.commons:commons-lang3:3.5'
 }
 
 test {
