feat: added /ibe command, lots of refactoring

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 plugins {
-    id 'fabric-loom' version '0.5-SNAPSHOT'
+    id "fabric-loom" version "0.5-SNAPSHOT"
 }
 
 dependencies {
