--- a/settings.gradle
+++ b/settings.gradle
@@ -2,12 +2,12 @@ pluginManagement {
     repositories {
         jcenter()
         maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
+            name = "Fabric"
+            url = "https://maven.fabricmc.net/"
         }
         gradlePluginPortal()
     }
 }
 
-rootProject.name = 'IBE-Editor'
+rootProject.name = "IBE-Editor"
 include("common", "fabric", "forge")
