--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,15 @@
+# Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-version=2.0.0
-# https://modmuss50.me/fabric.html
+# IBE Editor
 minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.4
-loader_version=0.11.1
-#Fabric api
-fabric_version=0.30.0+1.16
-forge_version=1.16.5-36.0.22
+version=2.0.0
+# Fabric https://modmuss50.me/fabric.html
+yarn_mappings=1.16.5+build.5
+loader_version=0.11.2
+fabric_version=0.31.0+1.16
+loom_version=0.6-SNAPSHOT
+# Forge
+forge_version=1.16.5-36.0.45
 mappings_channel=snapshot
 mappings_version=20201028-1.16.3
