--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile = "logo.png"
 
 [[mods]]
 modId = "ibeeditor"
-version = "1.2.4"
+version = "${file.jarVersion}"
 displayName = "IBE Editor"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 credits = "Thanks to Emex for the logo !"
