--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,11 @@ org.gradle.daemon=false
 minecraft_version=1.16.5
 version=2.0.0
 # Fabric https://modmuss50.me/fabric.html
-yarn_mappings=1.16.5+build.6
+yarn_mappings=1.16.5+build.9
 loader_version=0.11.3
-fabric_version=0.32.5+1.16
+fabric_version=0.34.6+1.16
 loom_version=0.6-SNAPSHOT
 # Forge
-forge_version=1.16.5-36.1.4
-mappings_channel=snapshot
-mappings_version=20210309-1.16.5
+forge_version=1.16.5-36.1.24
+mappings_channel=official
+mappings_version=1.16.5
