--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
 minecraft_version=1.16.5
-version=2.0.0
+archiveVersion=2.0.0
 # Fabric https://modmuss50.me/fabric.html
-yarn_mappings=1.16.5+build.9
-loader_version=0.11.3
-fabric_version=0.34.6+1.16
-loom_version=0.6-SNAPSHOT
+yarn_mappings=1.16.5+build.10
+loader_version=0.11.6
+fabric_version=0.36.0+1.16
+loom_version=0.7-SNAPSHOT
 # Forge
-forge_version=1.16.5-36.1.24
+forge_version=1.16.5-36.1.32
 mappings_channel=official
 mappings_version=1.16.5
