--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ task build(type: Jar, overwrite: true) {
                 "Implementation-Title"    : "ibeeditor",
                 "Implementation-Version"  : "${mod_version}",
                 "Implementation-Vendor"   : "Franckyi",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs"            : "ibeeditor.mixins.json"
         ])
     }
 }
