--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -3,21 +3,26 @@ import net.minecraftforge.gradle.common.task.SignJar
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
     }
 }
 
-apply plugin: "net.minecraftforge.gradle"
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.spongepowered.mixin'
 
 minecraft {
-    mappings channel: "$mappings_channel", version: "$mappings_version"
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+    mappings channel: mappings_channel, version: mappings_version
     runs {
         client {
-            workingDirectory project.file("../run")
-            property "forge.logging.console.level", "debug"
+            workingDirectory project.file('../run')
+            arg '-mixin.config=ibeeditor.mixins.json'
+            property 'forge.logging.console.level', 'debug'
             mods {
                 ibeeditor {
                     source sourceSets.main
@@ -27,7 +32,7 @@ minecraft {
 
         server {
             workingDirectory project.file('../run')
-            property "forge.logging.console.level", "debug"
+            property 'forge.logging.console.level', 'debug'
             mods {
                 ibeeditor {
                     source sourceSets.main
@@ -37,18 +42,23 @@ minecraft {
     }
 }
 
+mixin {
+    add sourceSets.main, 'ibeeditor.refmap.json'
+}
+
 dependencies {
     minecraft "net.minecraftforge:forge:$forge_version"
-    implementation project(":common")
+    annotationProcessor 'org.spongepowered:mixin:0.8:processor'
+    implementation project(':common')
 }
 
 processResources {
-    from "src/main/resources", "../common/src/main/resources"
+    from 'src/main/resources', '../common/src/main/resources'
 }
 
 task signJar(type: SignJar) {
     onlyIf {
-        project.hasProperty("keyStore")
+        project.hasProperty('keyStore')
     }
 
     keyStore = project.keyStore
