--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,3 @@
 protected net.minecraft.client.gui.widget.TextFieldWidget func_146188_c(IIII)V # renderHighlight
+protected net.minecraft.client.gui.widget.TextFieldWidget field_146225_q # displayPos
+protected net.minecraft.client.gui.widget.TextFieldWidget field_146223_s # highlightPos
