--- a/ibeeditor-fabric/build.gradle
+++ b/ibeeditor-fabric/build.gradle
@@ -19,7 +19,9 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_version"
     implementation project(':databindings-api')
     implementation project(':gameadapter-api')
+    implementation project(':gameadapter-impl-common')
     implementation project(':guapi-api')
+    implementation project(':guapi-impl')
     implementation project(':ibeeditor-common')
 }
 
@@ -28,7 +30,7 @@ minecraft {
 }
 
 processResources {
-    from "src/main/resources", "../common/src/main/resources"
+    from "src/main/resources", "../ibeeditor-common/src/main/resources"
 
     inputs.property "version", project.mod_version
 
