--- a/ibeeditor-forge/build.gradle
+++ b/ibeeditor-forge/build.gradle
@@ -51,12 +51,14 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
     implementation project(':databindings-api')
     implementation project(':gameadapter-api')
+    implementation project(':gameadapter-impl-common')
     implementation project(':guapi-api')
+    implementation project(':guapi-impl')
     implementation project(':ibeeditor-common')
 }
 
 processResources {
-    from 'src/main/resources', '../common/src/main/resources'
+    from 'src/main/resources', '../ibeeditor-common/src/main/resources'
 }
 
 task signJar(type: SignJar) {
